--- a/online-feature-store/examples/notebook/features_persists_job.ipynb
+++ b/online-feature-store/examples/notebook/features_persists_job.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install the orion-py-client if not already installed\n",
-    "!pip install orion-py-client==0.1.1"
+    "# install the online-feature-store-py-client if not already installed\n",
+    "!pip install online-feature-store-py-client==0.1.1"
    ]
   },
   {
@@ -65,7 +65,7 @@
     "    from pyspark.sql import SparkSession\n",
     "    \n",
     "    spark = SparkSession.builder \\\n",
-    "        .appName(\"Orion Feature Push\") \\\n",
+    "        .appName(\"Online Feature Store Feature Push\") \\\n",
     "        .getOrCreate()"
    ]
   },
@@ -91,8 +91,8 @@
     "            []\n",
     "        )  # if fgs_to_consider is empty, all the feature groups will be considered\n",
     "\n",
-    "    # create a new orion client\n",
-    "    opy_client = OrionPyClient(features_metadata_source_url, job_id, job_token)\n",
+    "    # create a new OnlineFeatureStore client\n",
+    "    opy_client = OnlineFeatureStorePyClient(features_metadata_source_url, job_id, job_token)\n",
     "\n",
     "    # get the features details\n",
     "    (\n",
