Handle fill na for different datatypes and Change client name

--- a/online-feature-store/examples/notebook/push_features_to_online_feature_store.ipynb
+++ b/online-feature-store/examples/notebook/push_features_to_online_feature_store.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "# install the online-feature-store-py-client if not already installed\n",
-    "!pip install online-feature-store-py-client==0.1.1"
+    "!pip install spark-feature-push-client"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from online_feature_store_py_client import OnlineFeatureStorePyClient\n",
+    "from spark_feature_push_client import OnlineFeatureStorePyClient\n",
     "from datetime import datetime\n",
     "import os"
    ]
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_helpers import get_features_from_all_sources, write_to_cloud_storage\n"
+    "from data_helpers import get_features_from_all_sources, write_to_cloud_storage, fill_na_features_with_default_values"
    ]
   },
   {
@@ -108,7 +108,6 @@
     "            spark,\n",
     "            entity_column_names,\n",
     "            offline_src_type_columns,\n",
-    "            offline_col_to_default_values_map,\n",
     "            entity_config[\"src_type_to_partition_col_map\"],\n",
     "        )\n",
     "    else:\n",
@@ -116,9 +115,12 @@
     "        df = get_features_from_all_sources(\n",
     "            spark,\n",
     "            entity_column_names,\n",
-    "            offline_src_type_columns,\n",
-    "            offline_col_to_default_values_map,\n",
+    "            offline_src_type_columns\n",
     "        )\n",
+    "        \n",
+    "    # Fill null features with default values\n",
+    "    offline_col_to_datatype_map = opy_client.get_offline_col_to_datatype_map()\n",
+    "    df = fill_na_features_with_default_values(df, offline_col_to_default_values_map, offline_col_to_datatype_map)\n",
     "\n",
     "    if (\n",
     "        \"rows_limit\" in entity_config\n",
